static/assets/css/custom.css
/* Common content */

body {
  background:
    linear-gradient(
      rgba(208, 214, 255, 0.28),
      rgba(133, 132, 184, 0.39)
    ), url(../img/halftone.png);
  background-position: center;
  background-repeat: repeat;
  background-attachment: fixed;
}

.teddy-img {
  width: 15em;
  position: absolute;
  right: 3em;
  bottom: 1.5em;
}

.teddy-img img {
  max-width: 100%;
  max-height: 100%;
  opacity: .8;
}

.mobile-advice {
  display: none;
}

@media only screen and (max-width: 600px) {
  .teddy-img {
    display: none;
  }

  .mobile-advice {
    display: inline-block;
  }
}

@media only screen and (max-width: 700px) {
  .teddy-img {
    width: 10em;
  }
}

/* Front page */

.tree-background {
  background-image: url("../img/tree_compressed_coloured.png");
  width: 100%;
  height: 900px;
  position: absolute;
  background-position: center top;
  background-repeat: no-repeat;
  animation: .6s ease-out 0s 1 fadeIn;
  z-index: -1;
}

@keyframes fadeIn {
  0% {
    background-position: center -40%, center;
    opacity: .1;
  }
  75% {
    opacity: .8;
  }
  100% {
    background-position: center top, center;
    opacity: 1;
  }
}

.quote {
  margin-top: 18em;
  background-color: rgba(232, 232, 232, 0.54);
}

.quote-line {
  font-size: 2.2em;
  margin: 0;
  padding: .3em;
}

@media only screen and (max-width: 400px) {
  .quote {
    margin-top: 10em;
  }
  .tree-background {
    top: -6em;
  }
}

/* RSVP form */

label {
  margin: .2em;
}

input[type="text"] {
  float: right;
  width: 23em;
}

fieldset {
  border: rgba(15, 15, 50, 0.18) solid 1px;
}

#thankyou_message {
  display: none;
}

textarea {
  width: 100%;
}

/* Google Maps iframe */

iframe {
  width: 100%;
  height: 450px;
  border: 0;
  margin: 1em auto;
}

@media only screen and (max-width: 600px) {
  iframe {
    max-width: 300px;
    max-height: 225px;
    border: 0;
  }
}

/* Single page layout */

.container {
  padding: 0;
  padding-top: 4em;
  position: relative;
}

.article {
  display: inline-block;
  min-height: 620px;
  width: 50%;
  margin-left: 4%;
}

.article-image.right {
  position: absolute;
  right: 6%;
  display: inline-block;
  max-width: 30%;
}

.article-image img {
  width: 100%;
}

.article-title {
  line-height: .7em;
  margin-bottom: .5em;
}

@media only screen and (max-width: 400px) {
  .container {
    padding: 2em 1em 0 1em;
  }

  .article {
    margin-left: 0;
  }
}

@media only screen and (max-width: 600px) {
  .article-image,
  .article-image.right {
    display: none;
  }

  .article {
    width: 92%; /* leaving 4% right margin */
  }
}

/* Buttons */

.btn {
  display: inline-block;
  outline: none;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  font: 1em 'EB Garamond', serif;
  padding: .5em 2em .55em;
  margin: 1em 0;
  border-radius: .5em;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
}

.btn:hover {
  text-decoration: none;
}

.btn:active {
  position: relative;
  top: 1px;
}

.btn.right-align {
  float: right;
}

/* Button colour options */

.navy {
  color: #fef4e9;
  border: solid 1px #020408;
  background: #15213f;
  background: linear-gradient(#263b70, #0b1222);
}

.navy:hover {
  background: #0d1427;
  background: linear-gradient(#1d2c53, #0d1427);
}

.navy:active {
  background: linear-gradient(#0b1222, #263b70);
}

.green {
  color: #fef4e9;
  border: solid 1px #203521;
  background: #2e4f30;
  background: linear-gradient(#3f6941, #1a2b1b);
}

.green:hover {
  background: #1f3621;
  background: linear-gradient(#3a613c, #111d12);
}

.green:active {
  color: #fcd3a5;
  background: linear-gradient(#1a2b1b, #3f6941);
}

